# attys-ep

./: CMakeLists.txt  README  README.md  attys-ep  attys-ep.cpp  attys-ep.h  attys-ep.pro  attys-ep.sln  attys-ep.vcxproj  attys-ep.vcxproj.filters  attys-vep.cpp  attys-vep.h  attys-vep.pro  audiobeep.cpp  audiobeep.h  dataplot.cpp  dataplot.h  example_vep.tsv  main.cpp  mainwindow.cpp  mainwindow.h  playpushbutton.h  psthplot.h  stim.cpp  stim.h  vepplot.cpp  vepplot.h
installer/: Setup.vdproj  installer.vdproj
python/: README.md  calc_ep.py  fake_p300_eeg_with_ldr.tsv  fake_p300_with_ldr.tsv  fake_vep_eeg_with_ldr.tsv  fake_vep_with_ldr.tsv  p300raw.tsv  vep.tsv
